[metadata]
name = artellapipe-tools-playblastmanager
description = Tool to generate cutomized playblasts
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: artellapipe.tools.playblastmanager.__version__.__version__
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/ArtellaPipe/artellapipe-tools-playblastmanager

[options]
zip_safe = false
include_package_data = true
packages=find:
install_requires=
    artellapipe

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1